--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -1509,27 +1509,6 @@ If you press to enter a move on the board, the move will not be acknowledged if 
        <string>Stones</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_11">
-       <item row="2" column="1">
-        <layout class="QHBoxLayout" name="horizontalLayout_6">
-         <item>
-          <widget class="QLabel" name="label_15">
-           <property name="text">
-            <string>Ambient light:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QSlider" name="ambientSlider">
-           <property name="maximum">
-            <number>100</number>
-           </property>
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
        <item row="0" column="0" colspan="2">
         <widget class="QGroupBox" name="buttonGroup6">
          <property name="title">
@@ -1581,7 +1560,110 @@ If you press to enter a move on the board, the move will not be acknowledged if 
          </layout>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="1" column="0" colspan="2">
+        <layout class="QHBoxLayout" name="presetLayout">
+         <item>
+          <widget class="QLabel" name="presetLabel">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Shader preset:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="shadersComboBox">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <item>
+            <property name="text">
+             <string>No preset, user configuration</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Recommended variant 1 (brighter)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Recommended variant 2 (darker)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Recommended variant 3 (high contrast)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Plain, high contrast</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Plain, low contrast</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Flattened, high contrast</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Flattened, low contrast</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Flattened, striped</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Shiny, round, striped</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Thin, striped</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="3" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_6">
+         <item>
+          <widget class="QLabel" name="label_15">
+           <property name="text">
+            <string>Ambient light:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSlider" name="ambientSlider">
+           <property name="maximum">
+            <number>100</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="2" column="0">
         <widget class="QGroupBox" name="whiteGroupBox">
          <property name="title">
           <string>White stone appearance</string>
@@ -1668,7 +1750,7 @@ If you press to enter a move on the board, the move will not be acknowledged if 
          </layout>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="2" column="1">
         <widget class="QGroupBox" name="blackGroupBox">
          <property name="title">
           <string>Black stone appearance</string>
@@ -1755,14 +1837,14 @@ If you press to enter a move on the board, the move will not be acknowledged if 
          </layout>
         </widget>
        </item>
-       <item row="2" column="0">
+       <item row="3" column="0">
         <widget class="QCheckBox" name="stripesCheckBox">
          <property name="text">
           <string>Simulate clamshell appearance</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="0" colspan="3">
+       <item row="4" column="0" colspan="3">
         <widget class="SizeGraphicsView" name="stoneView">
          <property name="verticalScrollBarPolicy">
           <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -1772,7 +1854,7 @@ If you press to enter a move on the board, the move will not be acknowledged if 
          </property>
         </widget>
        </item>
-       <item row="4" column="0" colspan="3">
+       <item row="5" column="0" colspan="3">
         <widget class="QGroupBox" name="GoEnginegroup_box_2">
          <property name="title">
           <string>Goban</string>
