--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -183,7 +183,7 @@
       <string/>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="InterfaceTabWidget">
       <attribute name="title">
@@ -1100,9 +1100,6 @@ If not available then interval time is used.</string>
           <property name="bottomMargin">
            <number>6</number>
           </property>
-          <property name="spacing">
-           <number>0</number>
-          </property>
           <item row="2" column="0">
            <widget class="QCheckBox" name="sliderCheckBox">
             <property name="toolTip">
@@ -1297,9 +1294,6 @@ Select how to display all brothers of the current move. Either not at all, or as
           <property name="bottomMargin">
            <number>6</number>
           </property>
-          <property name="spacing">
-           <number>6</number>
-          </property>
           <item row="2" column="1">
            <widget class="QComboBox" name="varSGFStyleComboBox">
             <item>
@@ -1362,7 +1356,7 @@ Select how to display all brothers of the current move. Either not at all, or as
             <property name="sizeHint" stdset="0">
              <size>
               <width>20</width>
-              <height>0</height>
+              <height>1</height>
              </size>
             </property>
            </spacer>
@@ -1434,6 +1428,18 @@ child/sibling setting:</string>
           <string>Diagrams</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_6">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
           <item>
            <widget class="QCheckBox" name="diagClearCheckBox">
             <property name="whatsThis">
@@ -1488,6 +1494,18 @@ diagram pane shown:</string>
           <string>Game tree</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_7">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_15">
             <item>
@@ -1551,7 +1569,7 @@ diagram pane shown:</string>
             <property name="sizeHint" stdset="0">
              <size>
               <width>20</width>
-              <height>0</height>
+              <height>1</height>
              </size>
             </property>
            </spacer>
@@ -1572,6 +1590,18 @@ diagram pane shown:</string>
           <string>Stones</string>
          </property>
          <layout class="QHBoxLayout" name="_24">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
           <item>
            <widget class="QRadioButton" name="radioButtonStones_2D">
             <property name="toolTip">
@@ -1626,6 +1656,18 @@ This will display realistic 3D stones with stripes and shadow</string>
           <string>White stone appearance</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_9">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
           <item row="1" column="1">
            <widget class="QSlider" name="whiteHardSlider">
             <property name="orientation">
@@ -1701,6 +1743,18 @@ This will display realistic 3D stones with stripes and shadow</string>
           <string>Black stone appearance</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_10">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
           <item row="1" column="0">
            <widget class="QLabel" name="label_13">
             <property name="text">
@@ -1805,16 +1859,16 @@ This will display realistic 3D stones with stripes and shadow</string>
          </property>
          <layout class="QGridLayout" name="_25">
           <property name="leftMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <property name="topMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <property name="rightMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <property name="bottomMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <property name="spacing">
            <number>6</number>
@@ -2028,6 +2082,18 @@ If the picture is not set, or unvalid, a default goban is used by qgo</string>
           <string>Default games settings</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_8">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
           <item row="1" column="4">
            <widget class="QLineEdit" name="humanName"/>
           </item>
@@ -2175,6 +2241,18 @@ If the picture is not set, or unvalid, a default goban is used by qgo</string>
           <string>Go Engines</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_7">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
           <item row="7" column="0">
            <widget class="QWidget" name="widget_6" native="true">
             <layout class="QGridLayout" name="gridLayout_6">
@@ -2449,6 +2527,18 @@ Note: 'Delete' concerns saved records.</string>
           <string>Analysis</string>
          </property>
          <layout class="QFormLayout" name="formLayout">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
           <item row="0" column="0">
            <widget class="QLabel" name="label_17">
             <property name="text">
@@ -2842,16 +2932,16 @@ New users: leave blank!</string>
            <number>6</number>
           </property>
           <property name="leftMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <property name="topMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <property name="rightMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <property name="bottomMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <item>
            <widget class="QCheckBox" name="CheckBox_extUserInfo">
@@ -2894,16 +2984,16 @@ On IGS only.</string>
            <number>6</number>
           </property>
           <property name="leftMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <property name="topMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <property name="rightMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <property name="bottomMargin">
-           <number>11</number>
+           <number>6</number>
           </property>
           <item>
            <widget class="QCheckBox" name="CheckBox_autoSave">
@@ -2966,6 +3056,18 @@ If checked then when a game you played completes, it is automatically saved in t
           <string>Special players</string>
          </property>
          <layout class="QGridLayout" name="gridLayout">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
           <item row="0" column="0">
            <widget class="QLabel" name="TextLabel_watch">
             <property name="text">
@@ -4383,6 +4485,19 @@ Note: 'Delete' concerns saved records.</string>
           </item>
          </layout>
         </widget>
+       </item>
+       <item row="14" column="0">
+        <spacer name="verticalSpacer_19">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>1</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
