Align game tree at the top

--- a/src/boardwindow_gui.ui
+++ b/src/boardwindow_gui.ui
@@ -3051,7 +3051,7 @@ After placing and/or undo release button for returning to starting point automat
            </brush>
           </property>
           <property name="alignment">
-           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
           </property>
          </widget>
         </item>
