Opponent name and rank should be readonly in the GameDialog

--- a/src/newgame_gui.ui
+++ b/src/newgame_gui.ui
@@ -145,6 +145,9 @@
           <height>32767</height>
          </size>
         </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="2" column="0" colspan="4">
@@ -206,6 +209,9 @@
        <widget class="QLineEdit" name="playerOpponentEdit">
         <property name="text">
          <string>Opponent</string>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
