--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>664</width>
-    <height>767</height>
+    <height>787</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -187,7 +187,7 @@
       <string/>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="InterfaceTabWidget">
       <attribute name="title">
@@ -1642,27 +1642,6 @@ If you press to enter a move on the board, the move will not be acknowledged if 
          </item>
         </layout>
        </item>
-       <item row="3" column="1">
-        <layout class="QHBoxLayout" name="horizontalLayout_6">
-         <item>
-          <widget class="QLabel" name="label_15">
-           <property name="text">
-            <string>Ambient light:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QSlider" name="ambientSlider">
-           <property name="maximum">
-            <number>100</number>
-           </property>
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
        <item row="2" column="0">
         <widget class="QGroupBox" name="whiteGroupBox">
          <property name="title">
@@ -1837,14 +1816,96 @@ If you press to enter a move on the board, the move will not be acknowledged if 
          </layout>
         </widget>
        </item>
-       <item row="3" column="0">
-        <widget class="QCheckBox" name="stripesCheckBox">
-         <property name="text">
-          <string>Simulate clamshell appearance</string>
+       <item row="4" column="0" colspan="2">
+        <widget class="QFrame" name="frame_2">
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
          </property>
+         <property name="frameShadow">
+          <enum>QFrame::Raised</enum>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_16">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item row="0" column="1">
+           <widget class="QFrame" name="gridFrame_2">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_18">
+             <item row="0" column="0">
+              <widget class="QCheckBox" name="stripesCheckBox">
+               <property name="text">
+                <string>Simulate clamshell appearance</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QFrame" name="gridFrame">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_17">
+             <item row="0" column="1">
+              <widget class="QSlider" name="ambientSlider">
+               <property name="maximum">
+                <number>100</number>
+               </property>
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_15">
+               <property name="text">
+                <string>Ambient light:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="label_25">
+               <property name="text">
+                <string>Shadow opacity:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QSlider" name="shadowSlider">
+               <property name="maximum">
+                <number>100</number>
+               </property>
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </item>
-       <item row="4" column="0" colspan="3">
+       <item row="5" column="0" colspan="2">
         <widget class="SizeGraphicsView" name="stoneView">
          <property name="verticalScrollBarPolicy">
           <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -1854,7 +1915,7 @@ If you press to enter a move on the board, the move will not be acknowledged if 
          </property>
         </widget>
        </item>
-       <item row="5" column="0" colspan="3">
+       <item row="6" column="0" colspan="2">
         <widget class="QGroupBox" name="GoEnginegroup_box_2">
          <property name="title">
           <string>Goban</string>
@@ -4850,7 +4911,6 @@ Select one of the predefined hosts -- xxx -- and add a title to use it.</string>
   <tabstop>boardSizeSpin</tabstop>
   <tabstop>komiSpinDefault</tabstop>
   <tabstop>buttonOk</tabstop>
-  <tabstop>stoneView</tabstop>
   <tabstop>buttonApply</tabstop>
   <tabstop>buttonHelp</tabstop>
   <tabstop>checkBox_Nmatch_Black</tabstop>
@@ -4947,8 +5007,9 @@ Select one of the predefined hosts -- xxx -- and add a title to use it.</string>
   <tabstop>blackRoundSlider</tabstop>
   <tabstop>blackFlatSlider</tabstop>
   <tabstop>blackColorButton</tabstop>
-  <tabstop>stripesCheckBox</tabstop>
   <tabstop>ambientSlider</tabstop>
+  <tabstop>shadowSlider</tabstop>
+  <tabstop>stripesCheckBox</tabstop>
   <tabstop>woodComboBox</tabstop>
   <tabstop>LineEdit_goban</tabstop>
   <tabstop>GobanPicturePathButton</tabstop>
