Make the coordinates scalable, and use fontMarks for them
Coordinate boxes now scale with board size, and are a configurable fraction of
the normal square_size.

--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -1122,7 +1122,7 @@ If not available then interval time is used.</string>
           <property name="bottomMargin">
            <number>6</number>
           </property>
-          <item row="2" column="0">
+          <item row="3" column="0">
            <widget class="QCheckBox" name="cursorCheckBox">
             <property name="toolTip">
              <string>Show a ghost stone at mouse pointer</string>
@@ -1137,7 +1137,7 @@ Have a ghost stone showing the current position of the mouse pointer on the boar
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
+          <item row="4" column="0">
            <widget class="QCheckBox" name="tooltipsCheckBox">
             <property name="toolTip">
              <string>Disable Tool Tips</string>
@@ -1171,8 +1171,14 @@ Globally disables all tool tips that would show up if the mouse hovers over a GU
             </item>
            </widget>
           </item>
-          <item row="1" column="0">
+          <item row="2" column="0">
            <widget class="QLabel" name="label_4">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
              <string>Side bar:</string>
             </property>
@@ -1181,7 +1187,7 @@ Globally disables all tool tips that would show up if the mouse hovers over a GU
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item row="2" column="1">
            <widget class="QComboBox" name="sidebarComboBox">
             <item>
              <property name="text">
@@ -1197,6 +1203,12 @@ Globally disables all tool tips that would show up if the mouse hovers over a GU
           </item>
           <item row="0" column="0">
            <widget class="QLabel" name="label_3">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
              <string>Coordinates:</string>
             </property>
@@ -1205,7 +1217,7 @@ Globally disables all tool tips that would show up if the mouse hovers over a GU
             </property>
            </widget>
           </item>
-          <item row="4" column="0">
+          <item row="5" column="0">
            <spacer name="verticalSpacer_15">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -1220,6 +1232,35 @@ Globally disables all tool tips that would show up if the mouse hovers over a GU
              </size>
             </property>
            </spacer>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_24">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Coord size:</string>
+            </property>
+            <property name="buddy">
+             <cstring>coordSizeSlider</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QSlider" name="coordSizeSlider">
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
